<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.beldin0.android.mealplanner.ActivityAddIngredient">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal">
        </TextView>

        <EditText
            android:id="@+id/editText"
            style="@style/MenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <requestFocus/>
        </EditText>

    </LinearLayout>


    <CheckBox
        android:id="@+id/checkbox_advance"
        style="@style/MenuStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/meal_in_advance_text"
        >
    </CheckBox>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_type"
            />

        <Spinner
            android:id="@+id/mealtype_spinner"
            style="@style/MenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            tools:background="@android:drawable/btn_dropdown">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/add_new_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_this_ingredient"
            tools:background="@android:drawable/btn_default">

        </Button>

        <Spinner
            android:id="@+id/ingredient_spinner"
            style="@style/MenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            tools:background="@android:drawable/btn_dropdown">
        </Spinner>

    </LinearLayout>


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        >
    </ListView>

    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_this_meal"
        tools:background="@android:drawable/btn_default">

    </Button>

</LinearLayout>
