<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:layout_weight="1"
                                                 android:orientation="vertical"
                                                 tools:context="com.beldin0.android.mealplanner.ActivityAddIngredient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient">
        </TextView>

        <EditText
            android:id="@+id/editText"
            style="@style/MenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <requestFocus />
        </EditText>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_text">
        </TextView>

        <Spinner
            android:id="@+id/location_spinner"
            style="@style/MenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:text="@string/location">
        </Spinner>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MenuStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default unit of measurement">
            </TextView>

            <EditText
                android:id="@+id/editText2"
                style="@style/MenuStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <requestFocus/>
            </EditText>

        </LinearLayout>

        <CheckBox
        android:id="@+id/checkbox_protein"
        style="@style/MenuStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/ingredient_protein_text"
        >
    </CheckBox>

    <CheckBox
        android:id="@+id/checkbox_carb"
        style="@style/MenuStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/ingredient_carb_text"
        >
    </CheckBox>

        <!--<Button-->
        <!--android:id="@+id/submit_new_ingredient"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="@string/ingredient_save"-->
        <!--tools:background="@android:drawable/btn_default">-->

        <!--</Button>-->
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add"/>

</android.support.design.widget.CoordinatorLayout>
